--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ sqlalchemy>=2.0.0
 pymysql>=1.1.0
 python-dotenv>=1.0.0
 redis>=5.0.0
+alibabacloud_dysmsapi20170525>=4.0.0
+alibabacloud_tea_openapi>=0.3.0
+alibabacloud_tea_util>=0.3.0
